tests/errors/semantics/unary_operand_not_arithmetic/non-arithmetic_in_unplus.c
// Operand of this unary operator must be of arithemtic type
void main()
{
	+"str";
}
